# Stoa

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
apps/agent/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
apps/agent/scripts/: irys_upload.mjs
apps/agent/stoa_agent/: api.py  cli.py  config.py  errors.py  loop.py  schemas.py
apps/agent/stoa_agent/chain/: abis.py  circle_client.py  client.py
apps/agent/stoa_agent/kalshi/: client.py
apps/agent/stoa_agent/polymarket/: gamma.py
apps/agent/stoa_agent/reasoning/: runner.py
apps/agent/stoa_agent/storage/: irys.py  supabase.py
apps/agent/stoa_agent/triad/: __init__.py  bayesian.py  calibrator.py  embeddings.py  llm.py  memory.py  orchestrator.py  quantec.py  structural.py
deploy/: RAILWAY.md  daemon.Dockerfile  indexer.Dockerfile  migrations_005-009_bundle.sql  railway-daemon.json  railway-indexer.json
docs/: 001-monorepo-structure.md  api.md  architecture.md  audit.md  circle-developer-grant-application.md  demo-script.md  footguns.md  hackathon-manual.md  integration.md  outreachkit.md  refactor-backlog.md  resolution.md  roadmap.md  thesis.md  verification.md  x-thread.md
scripts/: apply-migrations.py  backfill-classifications.ts  backfill.ts  batch-publish.py  broadcast-one-order.ts  broadcast-proxy-order.ts  check-deposit-wallet-status.ts  create-and-register-agents.py  debug-all-creds-test.ts  debug-api-key-check.ts  debug-check-deposit-wallet-owner.ts  debug-create-key-for-deposit.ts  debug-derive-wallet.ts  (+26 more)
(+93 files in other folders)
