[project]
name = "stoa-agent"
version = "0.1.0"
description = "Stoa agent service — TradingAgents inference and trace publication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "tradingagents>=0.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
